--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,14 +1,15 @@
 .App {
-
+  text-align: center;
 }
 .Header {
   text-align: center;
   border: solid;
 }
-
-
-.Body {
-text-align: center;
+.BodyImg {
+  text-align: center;
+}
+.BodyTips {
+  text-align: center;
 }
 .Input {
   text-align: center;
@@ -17,9 +18,7 @@ text-align: center;
 
 .Buttons {
   text-align: center;
-  align-items: center;
-  align-self: center;
-  align-content: center;
+  margin-top: 1em;
 }
 
 #question {
@@ -70,6 +69,11 @@ text-align: center;
 }
 
 #tips {
+  margin-top: 1em;
+  background-color: grey;
+  color: black;
+}
+#imgButt {
   margin-top: 1em;
   background-color: grey;
   color: black;
