--- a/src/css/App.css
+++ b/src/css/App.css
@@ -24,6 +24,10 @@
   text-align: center;
   margin-top: 1em;
 }
+.Boton {
+  text-align: center;
+  margin-top: 1em;
+}
 
 #question {
   text-align: center;
@@ -50,7 +54,9 @@
   align-self: center;
   align-content: center;
 }
-
+.Pistas {
+  text-align: center;
+}
 #texto {
   text-align: center;
   width: 50%;
@@ -82,6 +88,18 @@
   color: white;
   border-color: blue;
   font-family: Georgia, serif;
+}
+#reset {
+  margin-right: 2%;
+  width: 8em;
+  height: 2em;
+  background-color: black;
+  color: white;
+  border-color: grey;
+  font-family: Georgia, serif;
+}
+#textoscore {
+  text-align: center;
 }
 
 #tips {
